# engineering_template

./: .gitignore  CLAUDE.local.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DEV.md  GIT.md  GNUmakefile  Makefile  README.md  dextool-mutate.toml  mkdocs.yml
.claude/: _TODO.md  _constitution.md  levels.md
.claude/skills/adr/: SKILL.md
.claude/skills/coder/: SKILL.md
.claude/skills/doc/: SKILL.md
.claude/skills/governance/: SKILL.md
.claude/skills/planner/: SKILL.md
.claude/skills/preflight/: SKILL.md
.claude/skills/qa/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/test-gen/: SKILL.md
.claude/skills/triage/: SKILL.md
.claude/skills/writer/: adr  architect  architect-security  artifacts  avoid-ai-writing  coder  conflict  doc  governance  grammar-check  init-context  iterative-loop  nlspec  planner  preflight  qa  release  review  rollback  security  skeptic  skill-creator  test-gen  thought-partner  triage  worktree
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  research_and_development.yml
.github/workflows/: docs.yml
docs/: index.md
docs/ai-management/: ai-lifecycle.md  ai-objectives.md  context-and-scope.md  controls.md  index.md  leadership-and-policy.md  performance-and-improvement.md  risk-and-impact.md  supplier-management.md  support.md
docs/architecture/: hw-architecture.md  sw-architecture.md  system-architecture.md
docs/architecture/decisions/: ADR-0001-template.md  _ADR.md
docs/architecture/interfaces/: api-contracts.md  electrical-icd.md  mechanical-icd.md
docs/design/: data-model.md  hw-schematics.md  mechanical-design.md  pcb-design.md  sw-detailed-design.md
docs/implementation/: bom.md  build-and-toolchain.md  coding-conventions.md  manufacturing.md
docs/meta/: documentation-guide.md  versioning.md
docs/meta/templates/: adr-template.md  icd-template.md  test-case-template.md
docs/operations/: deployment.md  maintenance.md  runbook.md  troubleshooting.md  user-manual.md
docs/overview/: charter.md  glossary.md  stakeholders.md
docs/project/: change-management.md  plan.md  risk-register.md
docs/requirements/: constraints.md  hw-requirements.md  stakeholder-needs.md  sw-requirements.md  system-requirements.md  traceability-matrix.md
docs/safety-compliance/: compliance.md  fmea.md  hazard-analysis.md  safety-concept.md  security.md
docs/verification/: coverage.md  hw-bring-up.md  verification-plan.md
src/: BuildInfo.cpp.in  CMakeLists.txt  main.cpp
src/application/: AppRunner.cpp  AppRunner.hpp  CMakeLists.txt
src/core/: Assert.hpp  BuildInfo.hpp  CMakeLists.txt  Error.hpp  EventBus.hpp  IClock.hpp  IConfig.hpp  IHealth.hpp  ILifecycle.hpp  ILogger.hpp  IMetrics.hpp  IQueue.hpp  ITask.hpp  ITimer.hpp  IWatchdog.hpp  Memory.hpp  RateLimiter.hpp  Result.hpp  RingBuffer.hpp  StateMachine.hpp  Status.hpp
src/domain/: CMakeLists.txt
src/hal/: CMakeLists.txt  IGPIO.hpp  IUART.hpp
src/infrastructure/: CMakeLists.txt
src/infrastructure/adapters/mock/: MockGpio.hpp  MockUart.hpp
src/infrastructure/adapters/posix/: PosixGpio.cpp  PosixGpio.hpp  PosixUart.cpp  PosixUart.hpp
src/infrastructure/adapters/stm32/: Stm32Gpio.hpp  Stm32Uart.hpp
src/infrastructure/concurrency/: StdQueue.hpp  StdTask.cpp  StdTask.hpp
src/infrastructure/config/: EnvConfig.cpp  EnvConfig.hpp
src/infrastructure/health/: HealthRegistry.hpp
src/infrastructure/lifecycle/: SignalLifecycle.cpp  SignalLifecycle.hpp
src/infrastructure/logging/: ConsoleLogger.cpp  ConsoleLogger.hpp  NullLogger.hpp
src/infrastructure/metrics/: NullMetrics.hpp
src/infrastructure/timer/: ChronoTimer.cpp  ChronoTimer.hpp
src/infrastructure/watchdog/: NullWatchdog.hpp  PosixWatchdog.cpp  PosixWatchdog.hpp
tests/: CMakeLists.txt
tests/e2e/: AppRunnerE2ETest.cpp  CMakeLists.txt
tests/mocks/: MockClock.hpp  MockLifecycle.hpp  MockLogger.hpp
tests/unit/: CMakeLists.txt
tests/unit/core/: CMakeLists.txt  EventBusTest.cpp  LogStreamTest.cpp  RateLimiterTest.cpp  ResultTest.cpp  RingBufferTest.cpp  StateMachineTest.cpp
tests/unit/infrastructure/: CMakeLists.txt  ConsoleLoggerTest.cpp
